--- a/src/app/modules/auth/loginc/loginc.component.html
+++ b/src/app/modules/auth/loginc/loginc.component.html
@@ -64,7 +64,7 @@
                         </div>
                         <div class="col-5 mb-2 mt-3">
                                 <span class="p-float-label">
-                                    <input name="username" pInputText  [(ngModel)]="registerRequest.user_adress" class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);" required>
+                                    <input name="username" pInputText  [(ngModel)]="registerRequest.Adress" class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);" required>
                                     <label htmlFor="username">İl/İlçe Giriniz</label>
                                 </span>
                             </div>                       
@@ -83,7 +83,7 @@
                     </div>
                     <div class="col-5 mb-2 mt-3">
                         <span class="p-float-label">
-                            <input name="user_gsm" pInputText [(ngModel)]="registerRequest.user_gsm" class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);" required>
+                            <input name="user_gsm" pInputText [(ngModel)]="registerRequest.gsm" class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);" required>
                             <label htmlFor="username">Telefon numaranızı giriniz</label>
                         </span>
                         <!-- <span class="p-float-label">
