--- a/src/app/components/pagess/profile/profile-panel/users-info-listes/users-info-listes.component.css
+++ b/src/app/components/pagess/profile/profile-panel/users-info-listes/users-info-listes.component.css
@@ -1773,3 +1773,61 @@ p {
 {
   margin-right: 25px !important;
 }
+
+
+/* modal */
+
+
+.modal {
+  animation: modal-animation 0.5s ease-in-out 0s 1 normal none;
+}
+  .modal.fade.show {
+    display: block;
+  }
+  /*display block görünmesini sağlayacak. none gizlenmesini sağlıyor.*/
+
+.modal-dialog {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20vh;
+  box-shadow: 0 1px 4px -2px #6a64f1;
+  border-radius: 5px;
+}
+
+.modal-header {
+  background-color: #f8f9fa;
+  border-bottom: none;
+}
+
+.modal-body {
+  padding: 20px;
+}
+
+.modal-footer {
+  background-color: #f8f9fa;
+  border-top: none;
+}
+
+.modal-content{
+  border:none;
+}
+
+.header-custom {
+
+  align-content: center;
+  width: 10%;
+  font-size:13px;
+
+}
+.header-custom {
+
+  align-content: center;
+  width: 10%;
+  font-size:13px;
+
+}
+.btn-primary{
+  background-color: #4BA47E !important;
+  border-color: #4BA47E !important;
+}
